# Wage-ETL

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  chore.md  task.md  user_story.md
.github/workflows/: test.yml
config/: README.md  __init__.py  config.yaml  logging.py  logging_conf.json  models.py  settings.py  state_fips.json
scripts/: test_rejects.py
sql/migrations/: README.md  V001___CREATE_TABLE_etl_runs.sql  V002__CREATE_TABLE_stg_wages.sql  V003__CREATE_TABLE_stg_expenses.sql  V004__CREATE_TABLE_stg_wages_rejects.sql  V005__CREATE_TABLE_stg_expenses_rejects.sql  V006__CREATE_INDEXES.sql  V007__CREATE_TABLE_dim_county.sql  V008__ALTER_county_fips_and_add_year.sql  V009__UPDATE_county_indexes.sql
src/: README.md
src/extract/: README.md  __init__.py  api_extractor.py  cache.py  census_api.py  csv_storage.py  extract_ops.py  http.py  logging_utils.py  scraping.py  wage_scraper.py  web_scraper.py
src/extract/apis/: __init__.py  base_api_client.py
src/extract/caching/: __init__.py  api_cache.py  cache_interface.py  scraper_cache.py
src/extract/scrapers/: __init__.py  base.py  base_scraper.py  scraper_base.py  scraper_cache.py  wage_scraper.py
src/load/: README.md  __init__.py  bulk_ops.py  db.py  run_tracker.py  staging.py
src/transform/: README.md  __init__.py  constants.py  csv_utils.py  models.py  normalizers.py  pandas_ops.py  validation.py
tests/: __init__.py  conftest.py  test_census_api.py  test_config_models.py  test_csv_storage.py  test_extract_ops.py  test_http.py  test_scraper_cache.py  test_scraping.py  test_wage_scraper.py
tests/integration/: test_extract_ops.py  test_wage_scraper.py
tests/unit/: test_cache.py  test_load_bulk_ops.py  test_load_db.py  test_load_run_tracker.py  test_load_staging.py  test_transform_models.py  test_transform_normalizers.py  test_transform_pandas_ops.py  test_transform_validation.py
