[project]
name = "living-wage-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "coverage>=7.12.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pydantic>=2.12.4",
    "pydantic-settings[yaml]>=2.12.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
