[project]
name = "wage-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "coverage>=7.13.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts = ["--disable-warnings", "-q"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "config/*", "sql/*", "data/*", "logs/*"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
